# virtual-mac

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  playwright.config.ts  state.json  styles.css  tsconfig.json
.automaker/: app_spec.txt  notifications.json
.automaker/events/: evt-1768999857562-1dd4c8ff.json  index.json
.beads/: issues.jsonl
.github/workflows/: deploy.yml  e2e-tests.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.1-UAT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
e2e/page-objects/: calculator.page.ts  desktop.page.ts  dock.page.ts  finder.page.ts  index.ts  menu-bar.page.ts  window-manager.page.ts
e2e/specs/: calculator.spec.ts  desktop.spec.ts  dock.spec.ts  finder.spec.ts  menu-bar.spec.ts  window-manager.spec.ts
src/: app_switcher.rs  calculator.rs  context_menu.rs  desktop.rs  dock.rs  drag_drop.rs  file_system.rs  finder.rs  lib.rs  menu_bar.rs  mission_control.rs  modals.rs  notes.rs  notification.rs  quicklook.rs  safari.rs  spotlight.rs  styles.css  system_settings.rs  system_state.rs  terminal.rs  textedit.rs  theme.rs  wallpaper.rs  window_context.rs  window_manager.rs
(+170 files in other folders)
