[package]
name = "virtualmac"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "MouseEvent", "DomRect", "HtmlElement",
    "KeyboardEvent", "HtmlInputElement", "EventTarget", "Event",
    "IdbFactory", "IdbDatabase", "IdbObjectStore", "IdbRequest",
    "IdbOpenDbRequest", "IdbTransaction", "IdbTransactionMode",
    "IdbCursor", "IdbCursorDirection", "IdbKeyRange", "IdbIndex",
    "DomException", "Storage", "Element"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[profile.release]
lto = true
opt-level = 'z'
